<?xml version="1.0"?>

<resources>
    <string name="app_name">Chubby Penguin</string>
    <string name="main_screen_title">Chubby Penguin</string>
    <string name="lets_start_button">Let\'s start</string>
    <string name="language_textView">Language:</string>
    <string name="settings_textView">Settings</string>
    <string name="hebrew_language">HE</string>
    <string name="english_language">EN</string>
    <string name="volume">Volume:</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_content">You should pass the ski track without hitting the obsticals.</string>
    <string name="finished_level">Congratulations</string>
    <string name="finished_game">Yaaay You Finished  The Game</string>
    <string name="finished_israel_level">Switzerland Level Opened !!</string>
    <string name="finished_switzerland_level">France Level Opened !!</string>
    <string name="lost_level">GAME OVER</string>
    <string name="try_again">Try Again</string>
    <string name="tap_to_jump">Tap To Jump</string>
    <string name="Collect_Food">Collect As Much As You Can From These</string>
    <string name="avoid_obstacales">Avoid The Shark</string>
</resources>