<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/page_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_settings_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/settings_textView"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_settings_textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="@string/language_textView"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/toggle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="3"
                android:background="@drawable/shape_radio_group_settings"
                android:checkedButton="@+id/offer"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_selected_hebrew"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/radio_group_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/hebrew_language"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_selected_english"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_group_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/english_language"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_settings_textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="@string/volume"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <SeekBar
                android:id="@+id/volume_seekbar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="20dp"
                android:progressTint="#0E5296"
                android:thumbTint="@color/black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>